--- a/front/src/styles/components/FormUP.module.sass
+++ b/front/src/styles/components/FormUP.module.sass
@@ -26,11 +26,13 @@
             position: absolute
             bottom: 255px
             right: 15px
+            z-index: 1
 
         .eyeCPass
             position: absolute
             bottom: 145px
             right: 15px
+            z-index: 1
 
         .btn
             width: 100%
