--- a/front/src/styles/components/Header.module.sass
+++ b/front/src/styles/components/Header.module.sass
@@ -6,6 +6,10 @@
     width: 100%
     background: linear-gradient(to right, variables.$light-blue, variables.$violet)
     @include mixin.flex(row, end, start)
+    .logo
+        position: absolute
+        top: 20px
+        left: 20px
     .menu
         margin-top: 30px
         margin-right: 30px
