complement in/up

--- a/front/src/styles/components/FormUP.module.sass
+++ b/front/src/styles/components/FormUP.module.sass
@@ -11,7 +11,16 @@
         @include mixin.flex(column,start,center)
         width: 100%
 
+        .logoDefault
+            display: none
+
+        .logo
+            position: absolute
+            top: 20px
+            left: 20px
+
         h2
+            margin-top: 40px
             margin-bottom: 50px
             @include mixin.fontStyle(variables.$font-default, normal, 500,2.8rem, 3.3rem)
             color: variables.$violet
@@ -59,6 +68,9 @@
             padding: 80px 60px
             @include mixin.flex(column,center,center)
 
+            .logo
+                display: none
+
             h2
                 @include mixin.fontStyle(variables.$font-default,normal, 500, 3.6rem, 4rem)
 
@@ -82,6 +94,12 @@
         section
             padding: 30px 40px
             height: 100%
+
+            .logoDefault
+                display: block
+                position: absolute
+                top: 30px
+                left: 30px
 
             h2
                 @include mixin.fontStyle(variables.$font-default, normal, 500,2.4rem, 2.8rem)
