--- a/front/src/styles/components/FormIN.module.sass
+++ b/front/src/styles/components/FormIN.module.sass
@@ -8,6 +8,9 @@
     padding: 60px 35px 50px 35px
     @include mixin.flex(column, start, center)
 
+    .logo
+        display: none
+
     h2
         @include mixin.fontStyle(variables.$font-default, normal, 500, 2.8rem, 3.3rem)
         color: variables.$violet
@@ -33,8 +36,11 @@
         background: variables.$violet
         color: variables.$white
         @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
-        margin-top: 60px
+        margin-top: 40px
         transition: .6s
+
+    .btnRegister
+        display: none
 
     .btn:hover
         @include mixin.effectButton(variables.$value)
@@ -45,6 +51,11 @@
         height: 100vh
         @include mixin.flex(column, center, center)
 
+        .logo
+            display: block
+            position: absolute
+            top: 20px
+            left: 20px
         h2
             margin-top: 30px
 
@@ -54,5 +65,12 @@
         .eye
             top: 163px
 
-        .btn
-            position: relative
+        .btnRegister
+            display: block
+            width: 100%
+            height: 43px
+            background: variables.$violet
+            color: variables.$white
+            @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
+            margin-top: 20px
+            transition: .6s
