--- a/front/src/styles/components/Header.module.sass
+++ b/front/src/styles/components/Header.module.sass
@@ -5,11 +5,12 @@
     height: 15vh
     width: 100%
     background: linear-gradient(to right, variables.$light-blue, variables.$violet)
-    @include mixin.flex(row, end, start)
-    .logo
-        position: absolute
-        top: 20px
-        left: 20px
-    .menu
-        margin-top: 30px
-        margin-right: 30px
+
+    .images
+        width: 100%
+        @include mixin.flex(row, space-between, center)
+        padding: 20px 20px 0px 20px
+
+        div
+            display: flex
+            gap: 20px
