--- a/front/src/styles/components/SignIn.module.sass
+++ b/front/src/styles/components/SignIn.module.sass
@@ -52,11 +52,8 @@
             width: 0
             height: 0
             .btn
-                width: 80%
-                position: absolute
-                bottom: 100px
-                left: 35px
-                z-index: 2
+                display: none
+
         .sectionTwo
             width: 100vw
             height: 100%
