finish modal edit profile

--- a/front/src/styles/components/FormUP.module.sass
+++ b/front/src/styles/components/FormUP.module.sass
@@ -8,7 +8,7 @@
 
     section
         padding: 80px 30px
-        @include mixin.flex(column,start,center)
+        @include mixin.flex(column,flex-start,center)
         width: 100%
 
         .logoDefault
