--- a/front/src/styles/components/Home.module.sass
+++ b/front/src/styles/components/Home.module.sass
@@ -2,8 +2,12 @@
 @use "../mixin"
 
 .main
-    height: 90vh
+    height: calc(100vh - 15vh + 50px)
     z-index: 1
+    background-color: variables.$white
+    margin-top: -50px
+    border-top-right-radius: 30px
+    border-top-left-radius: 30px
 
     section
         height: 100%
