--- a/front/src/styles/components/EditProfile.module.sass
+++ b/front/src/styles/components/EditProfile.module.sass
@@ -2,25 +2,69 @@
 @use "../variables"
 
 .container
-    width: 100vw
-    height: 100vh
-    position: relative
-    background: white
+    max-width: 100vw
+    max-height: 100vh
+    position: absolute
+    z-index: 1
 
-    section
-        width: 100vw
-        height: 100vh
-        background-color: red
-        position: absolute
-        top: 0
-        left: 0
-        z-index: 1
     .x
         position: absolute
-        top: 30px
-        right: 40px
+        top: 35px
+        right: 35px
+        cursor: pointer
 
-    div
+    .form
+        width: 100vw
+        height: 100vh
+        background: variables.$white
+        padding: 60px 35px 50px 35px
+        @include mixin.flex(column, center, flex-start)
+
         h1
             @include mixin.fontStyle(variables.$font-default, normal, 700, 3rem, 4rem)
             letter-spacing: .3rem
+            margin-bottom: 50px
+
+        .input
+            height: 40px
+            font-size: 1.6rem
+            margin-bottom: 30px
+            position: relative
+
+        .eyePass
+            position: absolute
+            bottom: 290px
+            right: 60px
+            z-index: 1
+
+        .eyeCPass
+            position: absolute
+            bottom: 195px
+            right: 60px
+            z-index: 1
+
+        .btn
+            width: 100%
+            height: 45px
+            @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
+            background-color: variables.$violet
+            color: variables.$white
+            margin-top: 30px
+            margin-bottom: 25px
+
+        .btn:hover
+            @include mixin.effectButton(variables.$value)
+
+@media (max-width: 1280px)
+.container
+    width: 100vw
+    height: 100vh
+    background: rgba(61, 61, 61, 0.48)
+    @include mixin.flex(row, center,center)
+
+    .form
+        width: 600px
+        height: 700px
+        background: variables.$white
+        padding: 60px 35px 50px 35px
+        @include mixin.flex(column, center, flex-start)
