--- a/front/src/styles/components/FormIN.module.sass
+++ b/front/src/styles/components/FormIN.module.sass
@@ -6,7 +6,7 @@
     max-width: 500px
     background-color: variables.$white
     padding: 60px 35px 50px 35px
-    @include mixin.flex(column, start, center)
+    @include mixin.flex(column, flex-start, center)
 
     .logo
         display: none
