finalizing the update profile form

--- a/front/src/styles/components/EditProfile.module.sass
+++ b/front/src/styles/components/EditProfile.module.sass
@@ -1,47 +1,46 @@
 @use '../mixin'
 @use "../variables"
 
-.container
-    max-width: 100vw
-    max-height: 100vh
-    position: absolute
-    z-index: 1
-
-    .x
-        position: absolute
-        top: 35px
-        right: 35px
-        cursor: pointer
-
+.conteudo
+    width: 100%
+    height: 100vh
+    background: white
     .form
-        width: 100vw
+        width: 100%
         height: 100vh
         background: variables.$white
-        padding: 60px 35px 50px 35px
-        @include mixin.flex(column, center, flex-start)
+        padding: 60px 35px
+        @include mixin.flex(column, center,flex-start)
+
+        .x
+            position: absolute
+            top: 40px
+            right: 40px
+            cursor: pointer
 
         h1
-            @include mixin.fontStyle(variables.$font-default, normal, 700, 3rem, 4rem)
-            letter-spacing: .3rem
+            @include mixin.fontStyle(variables.$font-default,normal, 700, 3.6rem,4.3rem)
+            color: variables.$violet
+            letter-spacing: .01rem
             margin-bottom: 50px
 
         .input
-            height: 40px
-            font-size: 1.6rem
-            margin-bottom: 30px
+            height: 45px
+            font-size: 1.7rem
+            margin-bottom: 25px
             position: relative
 
-        .eyePass
+        .eyePass, .eyeCPass
             position: absolute
-            bottom: 290px
-            right: 60px
             z-index: 1
 
+        .eyePass
+            bottom: 390px
+            right: 50px
+
         .eyeCPass
-            position: absolute
-            bottom: 195px
-            right: 60px
-            z-index: 1
+            bottom: 295px
+            right: 50px
 
         .btn
             width: 100%
@@ -55,16 +54,32 @@
         .btn:hover
             @include mixin.effectButton(variables.$value)
 
-@media (max-width: 1280px)
-.container
-    width: 100vw
-    height: 100vh
-    background: rgba(61, 61, 61, 0.48)
-    @include mixin.flex(row, center,center)
+@media screen and (min-width: 1024px)
+    .conteudo
+        background: rgba(61, 61, 61, 0.48)
+        @include mixin.flex(row, center,center)
 
-    .form
-        width: 600px
-        height: 700px
-        background: variables.$white
-        padding: 60px 35px 50px 35px
-        @include mixin.flex(column, center, flex-start)
+        .form
+            width: 520px
+            height: 650px
+            background: variables.$white
+            padding: 40px 40px 20px 40px
+
+            h1
+                margin-bottom: 30px
+
+            .input
+                height: 50px
+                font-size: 1.7rem
+                margin-bottom: 20px
+                position: relative
+
+            .eyePass
+                bottom: 260px
+
+            .eyeCPass
+                bottom: 160px
+
+            .btn
+                height: 50px
+                margin-top: 15px
