--- a/front/src/styles/components/Home.module.sass
+++ b/front/src/styles/components/Home.module.sass
@@ -2,17 +2,15 @@
 @use "../mixin"
 
 .main
-    height: calc(100vh - 15vh + 50px)
-    z-index: 1
-    background-color: variables.$white
+    width: 100vw
+    height: calc( 100vh - 15vh + 50px)
+    background: variables.$white
     margin-top: -50px
-    border-top-right-radius: 30px
     border-top-left-radius: 30px
+    border-top-right-radius: 30px
 
-    section
+    .modal
+        width: 100%
         height: 100%
-        background: #fff
-        border-top-left-radius: 30px
-        border-top-right-radius: 30px
-        margin-top: -5vh
-        padding: 20px 10px 0px 10px
+        position: absolute
+        top: 0
