--- a/front/src/styles/components/EditProfile.module.sass
+++ b/front/src/styles/components/EditProfile.module.sass
@@ -3,13 +3,13 @@
 
 .conteudo
     width: 100%
-    height: 100vh
+    min-height: 100vh
     background: white
     .form
         width: 100%
-        height: 100vh
+        min-height: 100%
         background: variables.$white
-        padding: 60px 35px
+        padding: 60px 35px 20px 35px
         @include mixin.flex(column, center,flex-start)
 
         .x
@@ -35,11 +35,11 @@
             z-index: 1
 
         .eyePass
-            bottom: 390px
+            bottom: 290px
             right: 50px
 
         .eyeCPass
-            bottom: 295px
+            bottom: 195px
             right: 50px
 
         .btn
