--- a/front/src/styles/components/Home.module.sass
+++ b/front/src/styles/components/Home.module.sass
@@ -3,14 +3,14 @@
 
 .main
     width: 100vw
-    height: calc( 100vh - 15vh + 50px)
+    height: calc( 100vh - 15vh + 4vh)
     background: variables.$white
-    margin-top: -50px
+    margin-top: -4vh
     border-top-left-radius: 30px
     border-top-right-radius: 30px
 
     .modal
         width: 100%
-        height: 100%
+        min-height: 100vh
         position: absolute
         top: 0
