--- a/front/src/styles/components/EditProfile.module.sass
+++ b/front/src/styles/components/EditProfile.module.sass
@@ -5,6 +5,8 @@
     width: 100%
     min-height: 100vh
     background: white
+    @include mixin.flex(row, center,center )
+
     .form
         width: 100%
         min-height: 100%
@@ -35,11 +37,11 @@
             z-index: 1
 
         .eyePass
-            bottom: 290px
+            bottom: 250px
             right: 50px
 
         .eyeCPass
-            bottom: 195px
+            bottom: 155px
             right: 50px
 
         .btn
