--- a/front/src/styles/components/Header.module.sass
+++ b/front/src/styles/components/Header.module.sass
@@ -14,3 +14,8 @@
         div
             display: flex
             gap: 20px
+
+@media screen and (min-width: 1024px)
+    .container
+        .images
+            height: 50px
