--- a/front/src/styles/components/Home.module.sass
+++ b/front/src/styles/components/Home.module.sass
@@ -8,9 +8,10 @@
     margin-top: -4vh
     border-top-left-radius: 30px
     border-top-right-radius: 30px
-
+    padding: 30px 20px 0px 20px
     .modal
         width: 100%
         min-height: 100vh
         position: absolute
         top: 0
+        left: 0
