--- a/front/src/styles/components/Header.module.sass
+++ b/front/src/styles/components/Header.module.sass
@@ -14,6 +14,7 @@
         div
             display: flex
             gap: 20px
+            align-items: center
 
 @media screen and (min-width: 1024px)
     .container
