--- a/front/src/styles/components/Header.module.sass
+++ b/front/src/styles/components/Header.module.sass
@@ -20,3 +20,6 @@
     .container
         .images
             height: 50px
+            div
+                .coin
+                    display: none
