--- a/front/src/styles/components/AddReg.module.sass
+++ b/front/src/styles/components/AddReg.module.sass
@@ -1,11 +1,35 @@
 @use "../mixin"
 @use "../variables"
+//  @include mixin.fontStyle(variables.$font-default,normal, 700, 3.6rem,4.3rem)
+// @include mixin.flex(column, center,flex-start)
 
 .container
     width: 100%
     min-height: 100vh
     background: variables.$white
-    @include mixin.flex(row, flex-start, center)
+    @include mixin.flex(column, center, center)
     position: relative
     z-index: 1
     padding: 40px
+
+    h1
+        @include mixin.fontStyle(variables.$font-default, normal, 700, 3rem,3.5rem)
+        margin-bottom: 50px
+
+    main
+        width: 100%
+        height: 100%
+        @include mixin.flex(column, center, center)
+
+        input
+            height: 40px
+            margin-bottom: 15px
+
+        button
+            width: 100%
+            height: 45px
+            @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
+            background-color: variables.$violet
+            color: variables.$white
+            margin-top: 30px
+            margin-bottom: 25px
