changes modal add register

--- a/front/src/styles/components/Resume.module.sass
+++ b/front/src/styles/components/Resume.module.sass
@@ -3,7 +3,7 @@
 
 .container
     width: 100%
-    min-height: 100vh
+    height: 100vh
     background: #FAFAFA
     @include mixin.flex(row, flex-start, center)
     position: relative
