--- a/front/src/styles/components/AddReg.module.sass
+++ b/front/src/styles/components/AddReg.module.sass
@@ -12,6 +12,11 @@
     z-index: 1
     padding: 40px
 
+    .x
+        position: absolute
+        top: 30px
+        right: 30px
+
     h1
         @include mixin.fontStyle(variables.$font-default, normal, 700, 3rem,3.5rem)
         margin-bottom: 50px
@@ -21,9 +26,10 @@
         height: 100%
         @include mixin.flex(column, center, center)
 
-        input
+        input, select
             height: 40px
             margin-bottom: 15px
+            @include mixin.fontStyle(variables.$font-default, normal, 400, 1.6rem, 1.5rem)
 
         button
             width: 100%
