--- a/front/src/styles/components/AddReg.module.sass
+++ b/front/src/styles/components/AddReg.module.sass
@@ -12,26 +12,38 @@
     z-index: 1
     padding: 40px
 
-    .x
-        position: absolute
-        top: 30px
-        right: 30px
-
-    h1
-        @include mixin.fontStyle(variables.$font-default, normal, 700, 3rem,3.5rem)
-        margin-bottom: 50px
-
     main
         width: 100%
         height: 100%
         @include mixin.flex(column, center, center)
+
+        .x
+            position: absolute
+            top: 30px
+            right: 30px
+
+        h1
+            @include mixin.fontStyle(variables.$font-default, normal, 700, 3rem,3.5rem)
+            margin-bottom: 25px
+
+        .buttons
+            @include mixin.flex(row, center, center)
+            border-radius: 0
+
+            button
+                width: 50%
+                height: 50px
+                border-radius: 0px
+                color: white
+                @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
+                margin-bottom: 15px
 
         input, select
             height: 40px
             margin-bottom: 15px
             @include mixin.fontStyle(variables.$font-default, normal, 400, 1.6rem, 1.5rem)
 
-        button
+        .btn
             width: 100%
             height: 45px
             @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
@@ -39,3 +51,60 @@
             color: variables.$white
             margin-top: 30px
             margin-bottom: 25px
+
+@media screen and (min-width: 1024px)
+    .container
+        background: rgba(61, 61, 61, 0.48)
+        padding: 0px
+
+        main
+            background: variables.$white
+            width: 40%
+            height: 550px
+            padding: 0px 40px
+            @include mixin.flex(column, center, flex-start)
+            position: relative
+            border-radius: 20px
+
+            .x
+                top: 20px
+                right: 20px
+                cursor: pointer
+
+            h1
+                margin-bottom: 10px
+
+            input, select, button
+                margin-bottom: 10px
+
+@media screen and (min-width: 1280px)
+    .container
+
+        main
+            height: 850px
+            width: 30%
+            border-radius: 20px
+
+            .buttons
+                margin-bottom: 20px
+
+                button
+                    height: 70px
+                    @include mixin.fontStyle(variables.$font-default, normal, 700, 1.9rem, 2.2rem)
+
+            .x
+                top: 40px
+                right: 40px
+
+            h1
+                margin-bottom: 40px
+
+            input, select
+                height: 60px
+                margin-bottom: 30px
+                @include mixin.fontStyle(variables.$font-default, normal, 400, 1.7rem, 1.9rem)
+
+            .btn
+                height: 65px
+                width: 100%
+                @include mixin.fontStyle(variables.$font-default, normal, 700, 1.9rem, 2.2rem)
