resume 1024px done

--- a/front/src/styles/components/EditProfile.module.sass
+++ b/front/src/styles/components/EditProfile.module.sass
@@ -69,6 +69,7 @@
             height: 650px
             background: variables.$white
             padding: 40px 40px 20px 40px
+            border-radius: 20px
 
             h1
                 margin-bottom: 30px
