--- a/front/src/styles/components/AddReg.module.sass
+++ b/front/src/styles/components/AddReg.module.sass
@@ -79,11 +79,12 @@
 
 @media screen and (min-width: 1280px)
     .container
-
+        overflow-x: hidden
         main
             height: 850px
             width: 30%
             border-radius: 20px
+            overflow-x: hidden
 
             .buttons
                 margin-bottom: 20px
