--- a/front/src/styles/components/Header.module.sass
+++ b/front/src/styles/components/Header.module.sass
@@ -16,6 +16,10 @@
             gap: 20px
             align-items: center
 
+@media (min-width: 650px) and (max-width: 914px)
+    .container
+        height: 35vh
+
 @media screen and (min-width: 1024px)
     .container
         .images
