--- a/front/src/styles/components/FormIN.module.sass
+++ b/front/src/styles/components/FormIN.module.sass
@@ -2,15 +2,16 @@
 @use "../variables"
 
 .main
-    height: 540px
-    max-width: 500px
     background-color: variables.$white
     padding: 60px 35px 50px 35px
-    @include mixin.flex(column, flex-start, center)
+    height: 100vh
+    @include mixin.flex(column, center, center)
+    position: relative
 
     .logo
-        display: none
-
+        position: absolute
+        top: 15px
+        left: 15px
     h2
         @include mixin.fontStyle(variables.$font-default, normal, 500, 2.8rem, 3.3rem)
         color: variables.$violet
@@ -30,7 +31,7 @@
         z-index: 1
         cursor: pointer
 
-    .btn
+    .btn, .btnRegister
         width: 100%
         height: 43px
         background: variables.$violet
@@ -39,38 +40,5 @@
         margin-top: 40px
         transition: .6s
 
-    .btnRegister
-        display: none
-
-    .btn:hover
+    .btn:hover,.btnRegister:hover
         @include mixin.effectButton(variables.$value)
-
-@media screen and (max-width: 820px)
-    .main
-        width: 100vw
-        height: 100vh
-        @include mixin.flex(column, center, center)
-
-        .logo
-            display: block
-            position: absolute
-            top: 20px
-            left: 20px
-        h2
-            margin-top: 30px
-
-        .input
-            margin-top: 10px
-
-        .eye
-            top: 163px
-
-        .btnRegister
-            display: block
-            width: 100%
-            height: 43px
-            background: variables.$violet
-            color: variables.$white
-            @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
-            margin-top: 20px
-            transition: .6s
