--- a/front/src/styles/components/FormIN.module.sass
+++ b/front/src/styles/components/FormIN.module.sass
@@ -2,7 +2,8 @@
 @use "../variables"
 
 .main
-    padding: 110px 35px 50px 35px
+    padding: 30px
+    min-height: 100vh
     @include mixin.flex(column, center, center)
     position: relative
 
@@ -14,6 +15,7 @@
         @include mixin.fontStyle(variables.$font-default, normal, 500, 2.8rem, 3.3rem)
         color: variables.$violet
         margin-bottom: 50px
+        text-align: center
 
     .input
         height: 50px
