--- a/front/src/styles/components/FormIN.module.sass
+++ b/front/src/styles/components/FormIN.module.sass
@@ -3,9 +3,9 @@
 
 .main
     padding: 30px
-    min-height: 100vh
     @include mixin.flex(column, center, center)
     position: relative
+    min-height: 100vh
 
     .logo
         position: absolute
@@ -16,20 +16,21 @@
         color: variables.$violet
         margin-bottom: 50px
         text-align: center
+    section
+        width: 100%
+        .input
+            height: 50px
+            margin-bottom: 30px
+            position: relative
+            font-size: 1.7rem
+            font-family: variables.$font-default
 
-    .input
-        height: 50px
-        margin-bottom: 30px
-        position: relative
-        font-size: 1.7rem
-        font-family: variables.$font-default
-
-    .eye
-        position: absolute
-        top: 144px
-        right: 14px
-        z-index: 1
-        cursor: pointer
+        .eye
+            position: absolute
+            top: 12px
+            right: 14px
+            z-index: 1
+            cursor: pointer
 
     .btn, .btnRegister
         width: 100%
@@ -45,10 +46,25 @@
 
 @media screen and (min-width: 768px)
     .main
-        width: 90%
-        height: 70vh
-        display: flex
-        justify-content: center
-        align-items: center
         .logo
             display: none
+        section
+            background: variables.$white
+            padding: 30px
+            .btnRegister
+                display: none
+
+@media screen and (min-width: 1280px)
+    .main
+        width: 100%
+        section
+            width: 80%
+            padding: 90px 30px
+            h2
+                @include mixin.fontStyle(variables.$font-default, normal, 500, 3.5rem, 5rem)
+            .input
+                width: 100%
+                height: 60px
+
+            .btn
+                height: 60px
