--- a/front/src/styles/components/SignUp.module.sass
+++ b/front/src/styles/components/SignUp.module.sass
@@ -1,7 +1,7 @@
 @use "../mixin"
 .main
-    min-width: 100vw
-    min-height: 100vh
+    max-width: 100vw
+    height: 100vh
     background-image: url("../../../public/images/background.svg")
     background-repeat: no-repeat
     background-size: cover
