--- a/front/src/styles/components/FormUP.module.sass
+++ b/front/src/styles/components/FormUP.module.sass
@@ -23,36 +23,50 @@
             margin-bottom: 50px
             @include mixin.fontStyle(variables.$font-default, normal, 500,2.8rem, 3.3rem)
             color: variables.$violet
-
-        .input
-            margin-bottom: 35px
-            height: 50px
-            font-size: 1.7rem
-            position: relative
-
-        .eyePass
-            position: absolute
-            bottom: 255px
-            right: 15px
-            z-index: 1
-
-        .eyeCPass
-            position: absolute
-            bottom: 145px
-            right: 15px
-            z-index: 1
-
-        .btn
+        form
             width: 100%
-            height: 45px
-            @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
-            background-color: variables.$violet
-            color: variables.$white
-            margin-top: 30px
-            margin-bottom: 25px
+            height: 100%
 
-        .btn:hover
-            @include mixin.effectButton(variables.$value)
+            .input
+                margin-bottom: 45px
+                height: 50px
+                font-size: 1.7rem
+                position: relative
+
+            .errorMessage
+                position: absolute
+                top: 50px
+                font-size: 1.3rem
+            .errorBackEnd
+                position: absolute
+                top: 70px
+                font-size: 1.3rem
+                color: red
+                left: 0
+            .eyePass
+                position: absolute
+                top: 10px
+                right: 15px
+                z-index: 1
+
+            .eyeCPass
+                position: absolute
+                bottom: 145px
+                top: 10px
+                right: 15px
+                z-index: 1
+
+            .btn
+                width: 100%
+                height: 45px
+                @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
+                background-color: variables.$violet
+                color: variables.$white
+                margin-top: 30px
+                margin-bottom: 25px
+
+            .btn:hover
+                @include mixin.effectButton(variables.$value)
 
         .link
             color: variables.$violet
@@ -105,7 +119,6 @@
                 margin-bottom: 25px
 
             .input
-                margin-bottom: 25px
                 height: 45px
                 font-size: 1.6rem
 
