--- a/front/src/styles/components/FormUP.module.sass
+++ b/front/src/styles/components/FormUP.module.sass
@@ -43,18 +43,12 @@
                 font-size: 1.3rem
                 color: red
                 left: 0
-            .eyePass
+            .eyePass, .eyeCPass
                 position: absolute
                 top: 10px
                 right: 15px
                 z-index: 1
-
-            .eyeCPass
-                position: absolute
-                bottom: 145px
-                top: 10px
-                right: 15px
-                z-index: 1
+                cursor: pointer
 
             .btn
                 width: 100%
@@ -75,25 +69,19 @@
 
 @media screen and (min-width: 768px)
     .main
-
         section
             height: 100vh
             padding: 80px 60px
             @include mixin.flex(column,center,center)
-
             .logo
                 display: none
-
             h2
                 @include mixin.fontStyle(variables.$font-default,normal, 500, 3.6rem, 4rem)
-
             .input
                 height: 60px
                 font-size: 2.1rem
-
             .eyePass
                 top: 287px
-
             .eyeCPass
                 bottom: 150px
 
