--- a/front/src/styles/components/FormIN.module.sass
+++ b/front/src/styles/components/FormIN.module.sass
@@ -20,11 +20,14 @@
         width: 100%
         .input
             height: 50px
-            margin-bottom: 30px
+            margin-bottom: 40px
             position: relative
             font-size: 1.7rem
             font-family: variables.$font-default
-
+        .errorMessage
+            position: absolute
+            bottom: 12px
+            font-size: 1.3rem
         .eye
             position: absolute
             top: 12px
