--- a/front/src/styles/components/FormIN.module.sass
+++ b/front/src/styles/components/FormIN.module.sass
@@ -28,6 +28,8 @@
             position: absolute
             bottom: 12px
             font-size: 1.3rem
+            left: 0
+            color: red
         .eye
             position: absolute
             top: 12px
