--- a/front/src/styles/components/AddReg.module.sass
+++ b/front/src/styles/components/AddReg.module.sass
@@ -25,32 +25,38 @@
         h1
             @include mixin.fontStyle(variables.$font-default, normal, 700, 3rem,3.5rem)
             margin-bottom: 25px
-
-        .buttons
-            @include mixin.flex(row, center, center)
-            border-radius: 0
-
-            button
-                width: 50%
-                height: 50px
-                border-radius: 0px
-                color: white
-                @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
-                margin-bottom: 15px
-
-        input, select
-            height: 40px
-            margin-bottom: 15px
-            @include mixin.fontStyle(variables.$font-default, normal, 400, 1.6rem, 1.5rem)
-
-        .btn
+        form
             width: 100%
-            height: 45px
-            @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
-            background-color: variables.$violet
-            color: variables.$white
-            margin-top: 30px
-            margin-bottom: 25px
+
+            .buttons
+                @include mixin.flex(row, center, center)
+                border-radius: 0
+
+                button
+                    width: 50%
+                    height: 50px
+                    border-radius: 0px
+                    color: white
+                    @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
+                    margin-bottom: 15px
+
+            input, select
+                height: 40px
+                margin-bottom: 25px
+                @include mixin.fontStyle(variables.$font-default, normal, 400, 1.6rem, 1.5rem)
+
+            .errors
+                position: absolute
+                bottom: 8px
+
+            .btn
+                width: 100%
+                height: 45px
+                @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
+                background-color: variables.$violet
+                color: variables.$white
+                margin-top: 30px
+                margin-bottom: 25px
 
 @media screen and (min-width: 1024px)
     .container
@@ -60,7 +66,6 @@
         main
             background: variables.$white
             width: 40%
-            height: 550px
             padding: 0px 40px
             @include mixin.flex(column, center, flex-start)
             position: relative
@@ -81,7 +86,7 @@
     .container
         overflow-x: hidden
         main
-            height: 850px
+            padding: 60px 30px
             width: 30%
             border-radius: 20px
             overflow-x: hidden
