--- a/front/src/styles/components/AddReg.module.sass
+++ b/front/src/styles/components/AddReg.module.sass
@@ -47,7 +47,8 @@
 
             .errors
                 position: absolute
-                bottom: 8px
+                bottom: 3px
+                font-size: 1.4rem
 
             .btn
                 width: 100%
