--- a/front/src/styles/components/Filter.module.sass
+++ b/front/src/styles/components/Filter.module.sass
@@ -37,6 +37,10 @@
                     border-radius: 10px
                     display: flex
                     gap: 5px
+                    padding: 15px
+                .btnInactive:hover
+                    background: #7978D9
+                    color: #fff
 
                 .btnActive
                     background: #7978D9
@@ -45,6 +49,7 @@
                     display: flex
                     gap: 5px
                     color: #fff
+                    padding: 15px
 
             .cardFooter
                 display: flex
@@ -56,6 +61,9 @@
                     background: #FAFAFA
                     box-shadow: 0px 2px 11px rgba(0, 0, 0, 0.1)
                     border-radius: 10px
+                button:hover
+                    background: #7978D9
+                    color: #fff
 
 @media screen and (min-width: 1024px)
     .container
