--- a/front/src/styles/components/EditProfile.module.sass
+++ b/front/src/styles/components/EditProfile.module.sass
@@ -33,17 +33,16 @@
             margin-bottom: 25px
             position: relative
 
+        .errorMessage
+            position: absolute
+            bottom: 5px
+            font-size: 1.3rem
+
         .eyePass, .eyeCPass
             position: absolute
             z-index: 1
-
-        .eyePass
-            bottom: 250px
-            right: 50px
-
-        .eyeCPass
-            bottom: 155px
-            right: 50px
+            top: 9px
+            right: 15px
 
         .btn
             width: 100%
