cleaning the code

--- a/front/src/pages/components/AddFormTransaction/styles.module.sass
+++ b/front/src/pages/components/AddFormTransaction/styles.module.sass
@@ -1,5 +1,5 @@
-@use "../mixin"
-@use "../variables"
+@use "../../../styles/mixin"
+@use "../../../styles/variables"
 //  @include mixin.fontStyle(variables.$font-default,normal, 700, 3.6rem,4.3rem)
 // @include mixin.flex(column, center,flex-start)
 
@@ -12,7 +12,7 @@
     z-index: 1
     padding: 40px
 
-    main
+    section
         width: 100%
         height: 100%
         @include mixin.flex(column, center, center)
