--- a/front/src/pages/components/EditProfileForm/styles.module.sass
+++ b/front/src/pages/components/EditProfileForm/styles.module.sass
@@ -1,6 +1,5 @@
-@use '../mixin'
-@use "../variables"
-
+@use "../../../styles/mixin"
+@use "../../../styles/variables"
 .conteudo
     width: 100%
     min-height: 100vh
