--- a/front/src/pages/components/Header/styles.module.sass
+++ b/front/src/pages/components/Header/styles.module.sass
@@ -1,6 +1,5 @@
-@use "../variables"
-@use "../mixin"
-
+@use "../../../styles/mixin"
+@use "../../../styles/variables"
 .container
     height: 15vh
     width: 100%
