--- a/front/src/pages/components/Resume/styles.module.sass
+++ b/front/src/pages/components/Resume/styles.module.sass
@@ -1,6 +1,5 @@
-@use "../mixin"
-@use "../variables"
-
+@use "../../../styles/mixin"
+@use "../../../styles/variables"
 .container
     width: 100%
     height: 100vh
