--- a/front/src/pages/components/Table/styles.module.sass
+++ b/front/src/pages/components/Table/styles.module.sass
@@ -21,18 +21,19 @@
                     tr
 
                         th
-                            padding: 0px
+
                             text-align: center
 
                 .tBody
                     tr
+                        position: relative
                         td
+                            padding: 20px
                             text-align: center
-
                         .btn
+                            width: 100%
                             display: flex
                             justify-content: center
-                            gap: 8px
 
 @media screen and (min-width: 1024px)
     .container
