--- a/front/src/pages/components/DeleteTransaction/styles.module.sass
+++ b/front/src/pages/components/DeleteTransaction/styles.module.sass
@@ -1,6 +1,15 @@
 @use "../../../styles/mixin"
 @use "../../../styles/variables"
 .container
-    width: 300px
-    padding: 30px
+    width: 110px
+    padding: 5px
     background: #E4F2FD
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: column
+    border-radius: 20%
+    font-size: 1rem
+    position: absolute
+    top: 50px
+    z-index: 1
