--- a/front/src/pages/components/EditProfileForm/styles.module.sass
+++ b/front/src/pages/components/EditProfileForm/styles.module.sass
@@ -5,7 +5,8 @@
     min-height: 100vh
     background: white
     @include mixin.flex(row, center,center )
-
+    position: fixed
+    z-index: 1
     .form
         width: 100%
         min-height: 100%
