--- a/front/src/pages/components/Resume/styles.module.sass
+++ b/front/src/pages/components/Resume/styles.module.sass
@@ -8,6 +8,7 @@
     position: relative
     z-index: 1
     padding: 40px
+    position: fixed
 
     .x
         position: absolute
@@ -46,3 +47,57 @@
             @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
             background-color: variables.$violet
             color: variables.$white
+
+@media screen and (min-width: 768px)
+
+    .container
+        width: 250px
+        max-height: 250px
+        box-shadow: 0px 2px 11px rgba(0, 0, 0, 0.1)
+        border-radius: 10px
+        display: flex
+        flex-direction: column
+        justify-content: center
+        padding: 0
+        margin-top: 80px
+
+        .x
+            display: none
+
+        h1
+            padding: 0
+            margin-bottom: 25px
+            @include mixin.fontStyle(variables.$font-default,700, 500, 1.8rem, 2.1rem)
+        main
+            height: 0
+            display: flex
+            flex-direction: column
+            justify-content: center
+            width: 100%
+            height: 100%
+            padding: 0px 15px
+            display: block
+            display: flex
+            flex-direction: column
+            justify-content: center
+
+            strong
+                padding: 0
+                margin-bottom: 15px
+                @include mixin.fontStyle(variables.$font-default, normal, 500, 1.3rem, 1.5rem)
+                .profit
+                    padding: 0
+                    margin: 0
+            .border
+                padding-bottom: 15px
+                margin-bottom: 15px
+                .expenses
+                    padding: 0
+                    margin: 0
+            .balance
+                padding: 0
+                margin-bottom: 20px
+
+            button
+                padding: 0
+                margin: 0
