--- a/front/src/pages/components/EditProfileForm/styles.module.sass
+++ b/front/src/pages/components/EditProfileForm/styles.module.sass
@@ -1,90 +1,74 @@
 @use "../../../styles/mixin"
 @use "../../../styles/variables"
-.conteudo
-    width: 100%
-    min-height: 100vh
-    background: white
-    @include mixin.flex(row, center,center )
-    position: fixed
+.container
+    width: 100vw
+    height: 100vh
+    position: absolute
+    top: 0
+    left: 0
     z-index: 1
-    .form
+
+    form
         width: 100%
-        min-height: 100%
-        background: variables.$white
-        padding: 60px 35px 20px 35px
-        @include mixin.flex(column, center,flex-start)
-        z-index: 1
+
+        background: #fff
+        padding: 55px 35px 20px 35px
 
         .x
             position: absolute
-            top: 40px
-            right: 40px
-            cursor: pointer
+            top: 60px
+            right: 60px
 
         h1
-            @include mixin.fontStyle(variables.$font-default,normal, 700, 3.6rem,4.3rem)
-            color: variables.$violet
-            letter-spacing: .01rem
+            @include mixin.fontStyle(variables.$font-default, normal, 700, 3.6rem, 4.3rem )
             margin-bottom: 50px
 
-        .input
-            height: 45px
-            font-size: 1.7rem
+        .label
+            @include mixin.fontStyle(variables.$font-default, normal, 500, 2rem, 2.4rem )
+            color: #484848
+            margin-bottom: 10px
+
+        input
+            width: 100%
+            height: 50px
+            font-size: 1.4rem
+            @include mixin.fontStyle(variables.$font-default, normal, 400, 1.6rem, 1.9rem )
             margin-bottom: 25px
-            position: relative
 
-        .errorMessage
+        .eyePass
             position: absolute
-            bottom: 5px
-            font-size: 1.3rem
-
-        .eyePass, .eyeCPass
-            position: absolute
-            z-index: 1
-            top: 9px
+            top: 13px
             right: 15px
 
-        .btn
+        button
             width: 100%
-            height: 45px
+            padding: 25px
+            background: variables.$violet
+            color: #fff
+
             @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
-            background-color: variables.$violet
-            color: variables.$white
-            margin-top: 30px
-            margin-bottom: 25px
 
-        .btn:hover
-            @include mixin.effectButton(variables.$value)
+        button:hover
+            background: variables.$violet-hover
 
-@media screen and (min-width: 1024px)
-    .conteudo
+@media screen and (min-width: 768px)
+    .container
         background: rgba(61, 61, 61, 0.48)
-        @include mixin.flex(row, center,center)
-        position: relative
-        z-index: 1
+        position: fixed
 
-        .form
-            width: 520px
-            height: 650px
-            background: variables.$white
-            padding: 40px 40px 20px 40px
-            border-radius: 20px
+        form
+            width: 30%
+            padding: 0
+            overflow-x: hidden
 
             h1
-                margin-bottom: 30px
+                margin: 0
 
-            .input
-                height: 50px
-                font-size: 1.7rem
-                margin-bottom: 20px
-                position: relative
+            .label
+                margin: 0
 
-            .eyePass
-                bottom: 260px
+            input
+                margin: 0
 
-            .eyeCPass
-                bottom: 160px
-
-            .btn
-                height: 50px
-                margin-top: 15px
+            button
+                margin: 0
