--- a/front/src/pages/components/Resume/styles.module.sass
+++ b/front/src/pages/components/Resume/styles.module.sass
@@ -1,103 +1,53 @@
 @use "../../../styles/mixin"
 @use "../../../styles/variables"
 .container
-    width: 100%
-    height: 100vh
-    background: #FAFAFA
-    @include mixin.flex(row, flex-start, center)
-    position: relative
-    z-index: 1
-    padding: 40px
-    position: fixed
-
-    .x
-        position: absolute
-        top: 30px
-        right: 40px
-
-    h1
-        margin-bottom: 100px
-        @include mixin.fontStyle(variables.$font-default,normal, 500, 3.2rem, 3.6rem)
-
-    main
-        width: 100%
-
-        strong
-            @include mixin.fontStyle(variables.$font-default, normal, 500, 2.1rem, 2.4rem)
-            @include mixin.flex(row, space-between, flex-start)
-            margin-bottom: 30px
-
-            .profit
-                color: variables.$violet
-
-        .border
-            padding-bottom: 40px
-            border-bottom: 1px solid black
-
-            .expenses
-                color: variables.$orange
-
-        .balance
-            color: #3A9FF1
-
-        button
-            margin-top: 40px
-            width: 100%
-            height: 45px
-            @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
-            background-color: variables.$violet
-            color: variables.$white
-
+    display: none
 @media screen and (min-width: 768px)
-
     .container
+        display: block
         width: 250px
-        max-height: 250px
-        box-shadow: 0px 2px 11px rgba(0, 0, 0, 0.1)
-        border-radius: 10px
-        display: flex
-        flex-direction: column
-        justify-content: center
-        padding: 0
-        margin-top: 80px
+        margin-top: 60px
 
-        .x
-            display: none
-
-        h1
-            padding: 0
-            margin-bottom: 25px
-            @include mixin.fontStyle(variables.$font-default,700, 500, 1.8rem, 2.1rem)
-        main
-            height: 0
-            display: flex
-            flex-direction: column
-            justify-content: center
+        section
             width: 100%
-            height: 100%
-            padding: 0px 15px
-            display: block
-            display: flex
-            flex-direction: column
-            justify-content: center
+            @include mixin.flex(column, center, flex-start)
+            background: #FAFAFA
+            box-shadow: 0px 2px 11px rgba(0, 0, 0, 0.1)
+            border-radius: 10px
+            padding: 30px 35px
+
+            h1
+                color: #2F2F2F
+                margin-bottom: 25px
+                @include mixin.fontStyle(variables.$font-default, normal, 700, 1.8rem, 2.1rem)
 
             strong
-                padding: 0
+                color: #2F2F2F
                 margin-bottom: 15px
-                @include mixin.fontStyle(variables.$font-default, normal, 500, 1.3rem, 1.5rem)
-                .profit
-                    padding: 0
-                    margin: 0
-            .border
-                padding-bottom: 15px
-                margin-bottom: 15px
-                .expenses
-                    padding: 0
-                    margin: 0
-            .balance
-                padding: 0
-                margin-bottom: 20px
+                width: 100%
+                display: flex
+                justify-content: space-between
 
-            button
-                padding: 0
-                margin: 0
+                .profit
+                    color: #645FFB
+
+                .expenses
+                    color: #FA8C10
+
+                .balance
+                    color: #3A9FF1
+            .border
+                width: 100%
+                padding-bottom: 15px
+                border-bottom: 1px solid #EAEAEA
+
+        button
+            width: 100%
+            background: variables.$violet
+            color: #fff
+            padding: 20px 0px
+            @include mixin.fontStyle(variables.$font-default, normal, 700, 1.4rem, 1.7rem)
+            margin-top: 20px
+
+        button:hover
+            background: variables.$violet-hover
