--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -6,7 +6,6 @@ html {
   font-size: 62.5%;
 }
 
-
 body {
   padding: 0;
   margin: 0;
@@ -18,4 +17,8 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
