--- a/front/src/pages/components/UpdateProfile/styles.module.sass
+++ b/front/src/pages/components/UpdateProfile/styles.module.sass
@@ -7,16 +7,17 @@
     top: 0
     left: 0
     z-index: 1
+    background: #fff
+    @include mixin.flex(column, center,center)
 
     form
         width: 100%
-
         background: #fff
         padding: 55px 35px 20px 35px
 
         .x
             position: absolute
-            top: 60px
+            top: 120px
             right: 60px
 
         h1
@@ -39,7 +40,7 @@
             position: absolute
             top: 13px
             right: 15px
-
+            z-index: 2
         button
             width: 100%
             padding: 25px
@@ -51,24 +52,37 @@
         button:hover
             background: variables.$violet-hover
 
-@media screen and (min-width: 768px)
+@media screen and (min-width: 1024px)
     .container
         background: rgba(61, 61, 61, 0.48)
         position: fixed
 
         form
             width: 30%
-            padding: 0
-            overflow-x: hidden
+            position: relative
+            padding: 20px 20px
+            border-radius: 20px
+
+            .x
+                position: absolute
+                top: 10px
+                right: 10px
 
             h1
-                margin: 0
+                font-size: 2.6rem
+                margin-bottom: 25px
 
             .label
-                margin: 0
+                font-size: 1.6rem
+                margin-bottom: 5px
 
-            input
-                margin: 0
+    @media screen and (min-width: 1280px)
+    .container
+        form
+            width: 30%
+            position: relative
 
-            button
-                margin: 0
+            .x
+                position: absolute
+                top: 40px
+                right: 20px
