--- a/front/src/pages/components/UpdateTransaction/styles.module.sass
+++ b/front/src/pages/components/UpdateTransaction/styles.module.sass
@@ -2,13 +2,12 @@
 @use "../../../styles/variables"
 .container
     position: fixed
-    top: 50%
-    left: 50%
+    top: 0
+    left: 0
     z-index: 1
-    width: 600px
+    width: 100vw
+    background: #fff
     height: 100vh
-    max-width: 100%
-
     section
         background: #fff
         width: 100%
